Fix foot notes for truncated paragraphs

--- a/_sass/layouts/outcome.scss
+++ b/_sass/layouts/outcome.scss
@@ -112,7 +112,7 @@
 
       background: $color_brand-secondary--bg;
 
-      li {
+      & > li {
         padding: 25px;
         padding-left: 50px; 
 
@@ -127,7 +127,11 @@
           h4 { color: lighten($color_brand-primary, 10); } 
         }
 
-        &.active p { display: block; }
+        &.active { 
+          .footnotes, p {
+            display: block; 
+          }
+        }
 
         h4 {
           margin: 0; 
@@ -135,6 +139,24 @@
           font-size: 16px;
 
           @include media('small') { font-size: 14px; }
+        }
+
+        .footnotes { 
+          display: none; 
+
+          ol { padding-left: 0px; }
+
+          li {
+            font-size: 10px; 
+
+            border-top: 1px solid $color_bg-medium;
+          }
+
+          p { 
+            margin: 0;
+
+            font-size: 10px;
+          }
         }
 
         p { 
@@ -159,9 +181,7 @@
 
           background: none;
 
-          &:hover {
-            color: $color_brand-secondary--light;
-          }
+          &:hover { color: $color_brand-secondary--light; }
         }
       }
     }
